5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1758_1189.log
== TEST (2019-05-28 13:26:05) 
-- CODE:
from numppy import *
x = input("insira a string:")

a = replace(x)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numppy import *
ModuleNotFoundError: No module named 'numppy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:26:10) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = replace(x)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:27:43) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:36:31) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
i = 0
k = 0
t = -1
msg = ""
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
print(msg)
		
print(a.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:37:24) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
i = 0
k = 0
t = -1
msg = ""
v = zeros(a, dtype = str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
print(msg)
		
print(a.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:37:44) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
i = 0
k = 0
t = -1
msg = ""
v = zeros(a, dtype =str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
print(msg)
		
print(a.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:38:01) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
i = 0
k = 0
t = -1
msg = ""
v = zeros(a, dtype=str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
print(msg)
		
print(a.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:38:44) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
i = 0
k = 0
t = -1
msg = ""
v = zeros(len(a), dtype=str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
print(msg)
		
print(a.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:41:19) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
print(a.upper())
i = 0
k = 0
t = -1
msg = ""
v = zeros(len(a), dtype=str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
	
if(msg == a):
	print(1)
else:
	print(0)

		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:42:06) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
print(a.upper())
i = 0
k = 0
t = -1
msg = ""
v = zeros(len(a), dtype=str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
	
if(msg == v):
	print(1)
else:
	print(0)

		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:42:26) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
print(a.upper())
i = 0
k = 0
t = -1
msg = ""
v = zeros(len(a), dtype=str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
	
if(msg == v.replace(" ","")):
	print(1)
else:
	print(0)

		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:42:53) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
print(a.upper())
i = 0
k = 0
t = -1
msg = ""
v = zeros(len(a), dtype=str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
	
if(msg == (v.replace(" ","")):
	print(1)
else:
	print(0)

		

-- ERROR:
File "XXXX", line 19
    if(msg == (v.replace(" ","")):
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:43:06) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
print(a.upper())
i = 0
k = 0
t = -1
msg = ""
v = zeros(len(a), dtype=str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
	
if(msg == (v.replace(" ",""))):
	print(1)
else:
	print(0)

		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:43:20) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
print(a.upper())
i = 0
k = 0
t = -1
msg = ""
v = zeros(len(a), dtype=str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
	
if((msg == (v.replace(" ",""))):
	print(1)
else:
	print(0)

		

-- EXECUTION TIME:
0.14027
-- ERROR:
  File "/home/codebench/codes/1758/1189/main.py", line 19
    if((msg == (v.replace(" ",""))):
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:43:21) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
print(a.upper())
i = 0
k = 0
t = -1
msg = ""
v = zeros(len(a), dtype=str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
	
if((msg == (v.replace(" ",""))):
	print(1)
else:
	print(0)

		

-- ERROR:
File "XXXX", line 19
    if((msg == (v.replace(" ",""))):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:44:26) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
print(a.upper())
i = 0
k = 0
t = -1
msg = ""
v = zeros(len(a), dtype=str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
	
if(msg == (x.replace(" ",""))):
	print(1)
else:
	print(0)

		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:44:35) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
print(a.upper())
i = 0
k = 0
t = -1
msg = ""
v = zeros(len(a), dtype=str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
	
if(msg == (x.replace(" ",""))):
	print(1)
else:
	print(0)

		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:44:41) 
-- CODE:
from numpy import *
x = input("insira a string:")

a = x.replace(" ","")
print(a.upper())
i = 0
k = 0
t = -1
msg = ""
v = zeros(len(a), dtype=str)
while(i < len(x)):
	if(x[i]!= " "):
		v[k] = x[t]
		msg = msg + v[k]
		k = k + 1
	t = t - 1
	i = i + 1
	
if(msg == (x.replace(" ",""))):
	print(1)
else:
	print(0)

		

-- EXECUTION TIME:
0.378187
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
